# agentplane

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  images.yaml  release.yaml
deploy/compose/: README.md  compose.yaml  registry.Dockerfile  runtime.Dockerfile
deploy/compose/agentgateway/: config.yaml
deploy/compose/keycloak/: agentplane-realm.json
deploy/compose/otel/: otel-collector-langfuse.yaml  otel-collector-mlflow.yaml
deploy/compose/postgres-init/: 01-databases.sql
deploy/compose/ui/: config.json
examples/: agent-with-tools.yaml  chat-with-history.yaml  echo-agent.yaml  mcp-tool-flow.yaml  orchestrator.yaml  rag-with-fallback.yaml  rag-with-rerank.yaml  structured-routing.yaml  support-rag.yaml
examples/resources/: default-llm.yaml  kb-support.yaml
schemas/: flow-definition.schema.json
scripts/: export_schema.sh  smoke.sh
